--- a/style.css
+++ b/style.css
@@ -1,1 +1,50 @@
+*{
+  background-color:#a7d8de;
+  font-family:Merriweather,Time New Roman, Arial;
+}
+
+.header{
+  border:2px solid black; 
+  text-align:center
+  font-size: 13px 
+}
+    
+.profile{
+  font-size:13px;
+  text-align: left
+}
+    
+.internships{
+  text-align: left
+}
+.experience{
+  text-align: left 
+}
+
+.education{
+  text-align: left 
+}
+
+img{
+  width: 200px;
+}
+
+h3{
+  color: #051006; 
+  font-size:18px;
+}
+
+h4{font-size:16px;
+}
+
+h5{font-size:14px;
+}
+
+h6{font-size:12px;
+}
+
+ul{font-size:13px
+}
+
+
 
