--- a/style.css
+++ b/style.css
@@ -5,24 +5,28 @@
 
 .header{
   border:2px solid black; 
-  text-align:center;
+  text-align: center;  
   font-size: 13px 
 }
     
 .profile{
   font-size:13px;
-  text-align: left
+  text-align: left;
+  padding-left:4px  
 }
     
 .internships{
-  text-align: left
+  text-align: left; 
+ padding-left: 4px
 }
 .experience{
-  text-align: left 
+  text-align: left;
+  padding-left:2px
 }
 
 .education{
-  text-align: left 
+  text-align: left;
+  padding-left:2px
 }
 
 img{
@@ -45,6 +49,7 @@ h6{font-size:12px;
 
 ul{font-size:13px
 }
+
 
 
 
